--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6.18.0",
-    "react-google-maps": "^9.4.5"
+    "react-router-dom": "6.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
