--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i8-icon": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "6.18.0"
   },
   "devDependencies": {
