--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
-  "homepage": "",
+  "homepage": "https://www.vycsafework.com/",
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
